# yammo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  docker-compose.yml  go.mod  go.sum  repositories.bzl
compass/: BUILD.bazel  server.go
example/: BUILD.bazel  client.go
gateway/: BUILD.bazel  server.go
protos/v1/compass/: BUILD.bazel  compass.proto
protos/v1/foo/: BUILD.bazel  foo.proto
protos/v1/primitives/: BUILD.bazel  player.proto  primitives.proto
protos/v1/tesseract/: BUILD.bazel  tesseract.proto
scripts/: add_repository.sh  batman.sh  create_build.sh
tesseract/: BUILD.bazel
