load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/nmcapule/yammo/compass",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/v1/foo:go_default_library",
        "@com_github_nmcapule_quadtree//:go_default_library",
    ],
)

go_binary(
    name = "compass",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
