load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "compass_proto",
    srcs = ["compass.proto"],
    visibility = ["//visibility:public"],
    deps = ["//protos/v1/primitives:primitives_proto"],
)

go_proto_library(
    name = "compass_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/nmcapule/yammo/protos/v1/compass",
    proto = ":compass_proto",
    visibility = ["//visibility:public"],
    deps = ["//protos/v1/primitives:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":compass_go_proto"],
    importpath = "github.com/nmcapule/yammo/protos/v1/compass",
    visibility = ["//visibility:public"],
)
