load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "player_proto",
    srcs = ["player.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "player_go_proto",
    importpath = "github.com/nmcapule/yammo/protos/v1/primitives",
    proto = ":player_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":player_go_proto"],
    importpath = "github.com/nmcapule/yammo/protos/v1/primitives",
    visibility = ["//visibility:public"],
)
