load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protos_v1_tesseract_proto",
    srcs = ["tesseract.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//protos/v1/primitives:primitives_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "protos_v1_tesseract_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/nmcapule/yammo/protos/v1/tesseract",
    proto = ":protos_v1_tesseract_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/v1/primitives:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":protos_v1_tesseract_go_proto"],
    importpath = "github.com/nmcapule/yammo/protos/v1/tesseract",
    visibility = ["//visibility:public"],
)
